--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c317a4af",
+   "id": "b64d8af0",
    "metadata": {
     "papermill": {
-     "duration": 0.002654,
-     "end_time": "2025-08-14T10:42:53.489979",
+     "duration": 0.003049,
+     "end_time": "2025-08-14T10:48:36.390897",
      "exception": false,
-     "start_time": "2025-08-14T10:42:53.487325",
+     "start_time": "2025-08-14T10:48:36.387848",
      "status": "completed"
     },
     "tags": []
@@ -20,19 +20,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "97b4908f",
+   "id": "96b113a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-14T10:42:53.496351Z",
-     "iopub.status.busy": "2025-08-14T10:42:53.495469Z",
-     "iopub.status.idle": "2025-08-14T10:42:55.215500Z",
-     "shell.execute_reply": "2025-08-14T10:42:55.214578Z"
+     "iopub.execute_input": "2025-08-14T10:48:36.398248Z",
+     "iopub.status.busy": "2025-08-14T10:48:36.397331Z",
+     "iopub.status.idle": "2025-08-14T10:48:38.209781Z",
+     "shell.execute_reply": "2025-08-14T10:48:38.208581Z"
     },
     "papermill": {
-     "duration": 1.72485,
-     "end_time": "2025-08-14T10:42:55.217252",
+     "duration": 1.817826,
+     "end_time": "2025-08-14T10:48:38.211644",
      "exception": false,
-     "start_time": "2025-08-14T10:42:53.492402",
+     "start_time": "2025-08-14T10:48:36.393818",
      "status": "completed"
     },
     "tags": []
@@ -48,19 +48,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cab945bb",
+   "id": "85171743",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-14T10:42:55.222889Z",
-     "iopub.status.busy": "2025-08-14T10:42:55.222604Z",
-     "iopub.status.idle": "2025-08-14T10:42:55.228362Z",
-     "shell.execute_reply": "2025-08-14T10:42:55.227597Z"
+     "iopub.execute_input": "2025-08-14T10:48:38.218375Z",
+     "iopub.status.busy": "2025-08-14T10:48:38.218078Z",
+     "iopub.status.idle": "2025-08-14T10:48:38.224882Z",
+     "shell.execute_reply": "2025-08-14T10:48:38.224071Z"
     },
     "papermill": {
-     "duration": 0.009961,
-     "end_time": "2025-08-14T10:42:55.229657",
+     "duration": 0.012161,
+     "end_time": "2025-08-14T10:48:38.226705",
      "exception": false,
-     "start_time": "2025-08-14T10:42:55.219696",
+     "start_time": "2025-08-14T10:48:38.214544",
      "status": "completed"
     },
     "tags": []
@@ -84,19 +84,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "53f7d1e8",
+   "id": "bd8b53aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-14T10:42:55.234943Z",
-     "iopub.status.busy": "2025-08-14T10:42:55.234711Z",
-     "iopub.status.idle": "2025-08-14T10:42:55.259609Z",
-     "shell.execute_reply": "2025-08-14T10:42:55.258742Z"
+     "iopub.execute_input": "2025-08-14T10:48:38.234358Z",
+     "iopub.status.busy": "2025-08-14T10:48:38.233431Z",
+     "iopub.status.idle": "2025-08-14T10:48:38.260903Z",
+     "shell.execute_reply": "2025-08-14T10:48:38.259927Z"
     },
     "papermill": {
-     "duration": 0.029208,
-     "end_time": "2025-08-14T10:42:55.261127",
+     "duration": 0.032715,
+     "end_time": "2025-08-14T10:48:38.262371",
      "exception": false,
-     "start_time": "2025-08-14T10:42:55.231919",
+     "start_time": "2025-08-14T10:48:38.229656",
      "status": "completed"
     },
     "tags": []
@@ -436,13 +436,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d740808b",
+   "id": "66ab3d5d",
    "metadata": {
     "papermill": {
-     "duration": 0.002348,
-     "end_time": "2025-08-14T10:42:55.266478",
+     "duration": 0.00281,
+     "end_time": "2025-08-14T10:48:38.268584",
      "exception": false,
-     "start_time": "2025-08-14T10:42:55.264130",
+     "start_time": "2025-08-14T10:48:38.265774",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24fcf495",
+   "id": "a42d523d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-14T10:42:55.272586Z",
-     "iopub.status.busy": "2025-08-14T10:42:55.272322Z",
-     "iopub.status.idle": "2025-08-14T10:42:55.294154Z",
-     "shell.execute_reply": "2025-08-14T10:42:55.293060Z"
+     "iopub.execute_input": "2025-08-14T10:48:38.275755Z",
+     "iopub.status.busy": "2025-08-14T10:48:38.275436Z",
+     "iopub.status.idle": "2025-08-14T10:48:38.297537Z",
+     "shell.execute_reply": "2025-08-14T10:48:38.296296Z"
     },
     "papermill": {
-     "duration": 0.026645,
-     "end_time": "2025-08-14T10:42:55.295640",
+     "duration": 0.027614,
+     "end_time": "2025-08-14T10:48:38.299279",
      "exception": false,
-     "start_time": "2025-08-14T10:42:55.268995",
+     "start_time": "2025-08-14T10:48:38.271665",
      "status": "completed"
     },
     "tags": []
@@ -501,13 +501,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f43f4590",
+   "id": "d95692b2",
    "metadata": {
     "papermill": {
-     "duration": 0.002317,
-     "end_time": "2025-08-14T10:42:55.300750",
+     "duration": 0.002926,
+     "end_time": "2025-08-14T10:48:38.305589",
      "exception": false,
-     "start_time": "2025-08-14T10:42:55.298433",
+     "start_time": "2025-08-14T10:48:38.302663",
      "status": "completed"
     },
     "tags": []
@@ -519,19 +519,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e7b2f08a",
+   "id": "72cfc03a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-14T10:42:55.306715Z",
-     "iopub.status.busy": "2025-08-14T10:42:55.306450Z",
-     "iopub.status.idle": "2025-08-14T10:42:55.336767Z",
-     "shell.execute_reply": "2025-08-14T10:42:55.335938Z"
+     "iopub.execute_input": "2025-08-14T10:48:38.313903Z",
+     "iopub.status.busy": "2025-08-14T10:48:38.313481Z",
+     "iopub.status.idle": "2025-08-14T10:48:38.345589Z",
+     "shell.execute_reply": "2025-08-14T10:48:38.344567Z"
     },
     "papermill": {
-     "duration": 0.034901,
-     "end_time": "2025-08-14T10:42:55.338182",
+     "duration": 0.038474,
+     "end_time": "2025-08-14T10:48:38.347248",
      "exception": false,
-     "start_time": "2025-08-14T10:42:55.303281",
+     "start_time": "2025-08-14T10:48:38.308774",
      "status": "completed"
     },
     "tags": []
@@ -704,19 +704,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0653d0e5",
+   "id": "0926976a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-14T10:42:55.345047Z",
-     "iopub.status.busy": "2025-08-14T10:42:55.344776Z",
-     "iopub.status.idle": "2025-08-14T10:42:55.351834Z",
-     "shell.execute_reply": "2025-08-14T10:42:55.351067Z"
+     "iopub.execute_input": "2025-08-14T10:48:38.355677Z",
+     "iopub.status.busy": "2025-08-14T10:48:38.354896Z",
+     "iopub.status.idle": "2025-08-14T10:48:38.363025Z",
+     "shell.execute_reply": "2025-08-14T10:48:38.361925Z"
     },
     "papermill": {
-     "duration": 0.011853,
-     "end_time": "2025-08-14T10:42:55.353128",
+     "duration": 0.013593,
+     "end_time": "2025-08-14T10:48:38.364317",
      "exception": false,
-     "start_time": "2025-08-14T10:42:55.341275",
+     "start_time": "2025-08-14T10:48:38.350724",
      "status": "completed"
     },
     "tags": []
@@ -739,13 +739,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93e87171",
+   "id": "825922e0",
    "metadata": {
     "papermill": {
-     "duration": 0.002578,
-     "end_time": "2025-08-14T10:42:55.358565",
+     "duration": 0.002983,
+     "end_time": "2025-08-14T10:48:38.370772",
      "exception": false,
-     "start_time": "2025-08-14T10:42:55.355987",
+     "start_time": "2025-08-14T10:48:38.367789",
      "status": "completed"
     },
     "tags": []
@@ -758,6 +758,93 @@
     "* Insulin has extreme outliers (max = 846).\n",
     "* Age goes up to 81 — suggests adult patient dataset.\n",
     "* We have lots of zeros(I think they used it as nan XD)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6e2b828",
+   "metadata": {
+    "papermill": {
+     "duration": 0.002944,
+     "end_time": "2025-08-14T10:48:38.376827",
+     "exception": false,
+     "start_time": "2025-08-14T10:48:38.373883",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Zero detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6792cf5d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-08-14T10:48:38.384165Z",
+     "iopub.status.busy": "2025-08-14T10:48:38.383863Z",
+     "iopub.status.idle": "2025-08-14T10:48:38.395410Z",
+     "shell.execute_reply": "2025-08-14T10:48:38.394433Z"
+    },
+    "papermill": {
+     "duration": 0.017237,
+     "end_time": "2025-08-14T10:48:38.397181",
+     "exception": false,
+     "start_time": "2025-08-14T10:48:38.379944",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zeros count in selected columns: Glucose            5\n",
+      "BloodPressure     35\n",
+      "SkinThickness    227\n",
+      "Insulin          374\n",
+      "BMI               11\n",
+      "dtype: int64\n",
+      "Zeros percentage in selected columns: Glucose           0.651042\n",
+      "BloodPressure     4.557292\n",
+      "SkinThickness    29.557292\n",
+      "Insulin          48.697917\n",
+      "BMI               1.432292\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Columns where zero is not a valid measurement\n",
+    "invalid_zero_cols = ['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']\n",
+    "\n",
+    "# Count how many zeros in each\n",
+    "zero_counts = (df[invalid_zero_cols] == 0).sum()\n",
+    "print(\"Zeros count in selected columns:\", zero_counts)\n",
+    "\n",
+    "# Percentage of zeros\n",
+    "zero_percentages = ((df[invalid_zero_cols] == 0).sum() / len(df)) * 100\n",
+    "print(\"Zeros percentage in selected columns:\", zero_percentages)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcbd94ec",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003052,
+     "end_time": "2025-08-14T10:48:38.403898",
+     "exception": false,
+     "start_time": "2025-08-14T10:48:38.400846",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "* one of the most awful datasets in the world. I dont have any idea why so much people have worked on this."
    ]
   }
  ],
@@ -796,14 +883,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 6.733251,
-   "end_time": "2025-08-14T10:42:55.779558",
+   "duration": 7.262015,
+   "end_time": "2025-08-14T10:48:38.926955",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-08-14T10:42:49.046307",
+   "start_time": "2025-08-14T10:48:31.664940",
    "version": "2.6.0"
   }
  },
